cmake_minimum_required(VERSION 3.21)
project(DynamicProgramming)

set(CMAKE_CXX_STANDARD 14)



add_executable(Fibonacci_Series Fibonacci_Series.cpp)
add_executable(MInimum_steps_to_one Minimum_steps_to_one.cpp)
add_executable(Min_Coin_change Min_Coin_change.cpp)
add_executable(Wines_Problem Wines_Problem.cpp)